<resources>
    <string name="app_name">Cancellable File Download</string>
    <string name="download_your_file">Download your file</string>
    <string name="download">Download</string>
    <string name="download_url">Download url</string>
    <string name="cancel">Cancel</string>
    <string name="download_progress">Download Progress</string>
    <string name="mesg_download_cancelled">DOWNLOAD CANCELLED</string>
    <string name="msg_download_complete">DOWNLOAD COMPLETE</string>
    <string name="click_download">CLICK DOWNLOAD</string>
</resources>